--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,15 +4,15 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
+			<img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0">
+			<p class="f3 lh-title light-gray b tc mb2">Kontakt</p>
+			<p>Nisi quis consectetur et in culpa aute aliquip duis fugiat Lorem.</p>
 
-			{{ partial "newsletter-form" . }}
+			<!-- {{ partial "newsletter-form" . }} -->
 
 		</div>
 
-		<div class="flex-ns justify-between">
+		<!-- <div class="flex-ns justify-between">
 
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
@@ -43,7 +43,7 @@
 				</ul>
 			</div>
 
-		</div>
+		</div> -->
 	</div>
 
 </footer>
