--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,9 +4,11 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0">
+			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
 			<p class="f3 lh-title light-gray b tc mb2">Kontakt</p>
-			<p>Nisi quis consectetur et in culpa aute aliquip duis fugiat Lorem.</p>
+			<p>e-mail: info@kvtsilesia.cz</p>
+			<p>tel.: +420 725 222 693</p>
+			<p>Adresa: Chrost 986/11, 735 35 Horní Suchá</p>
 
 			<!-- {{ partial "newsletter-form" . }} -->
 
