--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html lang="{{ $.Site.Language.Lang }}">
-  {{ partial "head" . }}
+<!-- <html lang="{{ $.Site.Language.Lang }}"> -->
+<html lang="{{ $.Site.LanguageCode }}">
+{{ partial "head" . }}
   <body class="sans-serif">
 
     <!-- {{ block "header" . }}{{ partial "nav" . }}{{end}} -->
