link Hlavní stránka

--- a/site/layouts/404.html
+++ b/site/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
 <h1 class="tc">Neplatný odkaz...</h1>
-<h3 class="tc"><a href="{{ "/" | relURL }}">Go Home</a></h3>
+<h3 class="tc"><a href="{{ "/" | relURL }}">Hlavní stránka</a></h3>
 
 {{ end }}
