--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -6,9 +6,10 @@
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
 			<p class="f3 lh-title light-gray b tc mb2">Kontakt</p>
-			<p class="tc i">e-mail: info@kvtsilesia.cz</p>
+			<p class="tc i">IČO: 09080864</p>
+			<p class="tc i">email: info@kvtsilesia.cz</p>
 			<p class="tc i">tel.: +420 725 222 693</p>
-			<p class="tc i">Adresa: Chrost 986/11, 735 35 Horní Suchá</p>
+			<p class="tc i">adresa: Chrost 986/11, 735 35 Horní Suchá</p>
 
 			<!-- {{ partial "newsletter-form" . }} -->
 
