editing in the text

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,15 +1,15 @@
-<footer class="bg-black ph3 pv4 white">
+<footer class="bg-black ph3 pv4 tc white">
 
 	<div class="mw7 center pt3">
 
 		<div class="measure-narrow center mb4">
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
-			<p class="f3 lh-title light-gray b tc mb2">Kontakt</p>
-			<p class="tc i">IČO: 09080864</p>
-			<p class="tc i">email: info@kvtsilesia.cz</p>
-			<p class="tc i">tel.: +420 725 222 693</p>
-			<p class="tc i">adresa: Chrost 986/11, 735 35 Horní Suchá</p>
+			<p class="f3 lh-title light-gray b tc">Kontakt</p>
+			<p>IČO: 09080864</p>
+			<p>email: info@kvtsilesia.cz</p>
+			<p>tel.: +420 725 222 693</p>
+			<p>adresa: Chrost 986/11, 735 35 Horní Suchá</p>
 
 			<!-- {{ partial "newsletter-form" . }} -->
 
