--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,5 +1,5 @@
-<div class="bg-grey-1 tc">
-  <div class="flex-l mhn1-l center mw7">
+<div class="bg-grey-1 tc pv4">
+  <div class="flex-l mhn1-l center mw7 pv3">
     <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2>
     <p class="w-60-l mb0">{{.text}}</p>
   </div>
