--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,5 +1,5 @@
 <div class="bg-grey-1 pv4 tc">
-	<div class="ph3 mw7 center">
+	<div class="ph3 center">
 
 		<div class="flex-l mhn2-l">
 			<div class="w-40-l ph2-l">
