--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,5 +1,5 @@
 <div class="bg-grey-1 tc pv4">
-  <div class="flex-l center pv3">
+  <div class="flex-l center tc pv3">
     <!-- <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2> -->
     <p class="w-60-l">{{.text}}</p>
   </div>
