--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-black ph3 pv4 tc white">
 
-	<div class="mw7 center pt3">
+	<!-- <div class="mw7 center pt3"> -->
 
 		<div class="measure-narrow center">
 
@@ -47,7 +47,7 @@
 			</div>
 
 		</div> -->
-	</div>
+	<!-- </div> -->
 
 </footer>
 
