--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -6,10 +6,10 @@
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
 			<p class="f3 lh-title light-gray b tc">Kontakt</p>
-			<p>IČO: 09080864</p>
-			<p>email: info@kvtsilesia.cz</p>
-			<p>tel.: +420 725 222 693</p>
-			<p>adresa: Chrost 986/11, 735 35 Horní Suchá</p>
+			<p class="mb0">IČO: 09080864</p>
+			<p class="mb0">email: info@kvtsilesia.cz</p>
+			<p class="mb0">tel.: +420 725 222 693</p>
+			<p class="mb0">adresa: Chrost 986/11, 735 35 Horní Suchá</p>
 
 			<!-- {{ partial "newsletter-form" . }} -->
 
