--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -4,7 +4,7 @@
 	--highlight: rgba(254, 213, 198, 1);
 	--white: rgba(255, 255, 255, 1);
 	--off-white: rgba(255, 253, 252, 1);
-	--grey-1: rgba(245, 243, 242, 1);
+	--grey-1: rgb(245, 243, 242);
 	--grey-2: rgba(235, 231, 230, 1);
 	--grey-3: rgb(56, 56, 56);
 	--grey-4: rgb(49, 49, 49);
