--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,6 +1,6 @@
 <div class="tc pv4 measure-narrow center">
   <!-- <div class="flex-l tc pv3">
     <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2> -->
-    <p>{{.text}}</p>
+    <p>{{with .text}}{{ . | safeHTML }}</p>
   <!-- </div> -->
 </div>
