--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,6 +1,8 @@
 <div class="tc pv4 measure-narrow center">
   <!-- <div class="flex-l tc pv3">
     <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2> -->
-    {{with .text}}{{ . | safeHTML }}
+    <p>{{ .text1}}</p>
+    <p>{{ .text2}}</p>
+    <p>{{ .text3}}</p>
   <!-- </div> -->
 </div>
