--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 		<div class="measure-narrow center">
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
-			<p class="f3 lh-title light-gray b tc">Kontakt</p>
+			<p class="mb0 f3 lh-title light-gray b tc">Kontakt</p>
 			<p class="mb0">IČO: 09080864</p>
 			<p class="mb0">email: info@kvtsilesia.cz</p>
 			<p class="mb0">tel.: +420 725 222 693</p>
