--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -8,7 +8,7 @@
 	--grey-2: rgba(235, 231, 230, 1);
 	--grey-3: rgb(56, 56, 56);
 	--grey-4: rgb(49, 49, 49);
-	--black: rgb(82, 82, 82);
+	--black: rgb(111,111,111);
 
 	/* Typography */
 	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
