--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,8 +1,13 @@
 <div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{.imageUrl}}')">
   <!-- <div class="mw7 center ph3"> -->
-    <a href="/" class="pa3 db mr4 h-100 w3 flex-none">
+    <!-- <a href="/" class="pa3 db mr4 h-100 w3 flex-none">
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
-		</a>
+    </a> -->
+    
+    <div class="pa3 db mr4 h-100 w3 flex-none">
+        <img src="img/logo.png">
+    </div>
+
     <div class="db mb3 mw7 center ph3">
       <div class="mw7 relative bg-fix-primary mb3">
         <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
@@ -15,6 +20,8 @@
           {{.subtitle}}
         </p>
         {{ end }}
+
+
       </div>
     </div>
   <!-- </div> -->
