--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -4,11 +4,11 @@
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
     </a> -->
     
-    <div class="pa3 db mr4 h-100 w3 flex-none">
+    <div class="db mb3 mw7 center ph3">
         <img src="img/logo.png">
     
 
-    <div class="db mb3 mw7 center ph3">
+    <div class="">
       <div class="mw7 relative bg-fix-primary mb3">
         <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
           {{.title}}
