--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -9,14 +9,14 @@
     
 
     <div class="">
-      <div class="mw7 relative bg-fix-primary mb3">
+      <div class="mw7 relative mb3">
         <h1 class="f2 f1-l b di lh-title mb3 white mw6">
           {{.title}}
         </h1>
       </div>
-      <div class="mw7 relative bg-fix-primary">
+      <div class="mw7 relative">
         {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6 bg-primary">
+        <p class="b f4 di lh-title mb3 white mw6">
           {{.subtitle}}
         </p>
         {{ end }}
