--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -10,7 +10,7 @@
 
     <div class="">
       <div class="mw7 relative mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6">
+        <h1 class="f2 f1-l b di lh-title mb3 black mw6">
           {{.title}}
         </h1>
       </div>
