change color text

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -16,7 +16,7 @@
       </div>
       <div class="mw7 relative">
         {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6">
+        <p class="b f4 di lh-title mb3 black mw6">
           {{.subtitle}}
         </p>
         {{ end }}
