--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -12,7 +12,7 @@
 	--black:  rgb(0, 0, 0);
 
 	/* Typography */
-	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, ;
 	--line-height: 1.5;
 
 	--font-size: 18px;
