--- a/src/css/imports/_font-style.css
+++ b/src/css/imports/_font-style.css
@@ -15,6 +15,6 @@
   .i-l       { font-style: italic; }
   .fs-normal-l     { font-style: normal; }
 }
-.body   {
+  .varta {
   font-family: 'Varta', sans-serif;
 }
