--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,13 +8,13 @@
         <img src="img/logo.png">
     
 
-    <div class="">
+    <div class="varta">
       <div class="mw7 relative mb3">
         <h1 class="f2 f1-l b di lh-title mb3 black mw6">
           {{.title}}
         </h1>
       </div>
-      <div class="mw7 relative">
+      <div class="varta mw7 relative">
         {{ if .subtitle }}
         <p class="b f4 di lh-title mb3 black mw6">
           {{.subtitle}}
