--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <!-- <html lang="{{ $.Site.Language.Lang }}"> -->
 <html lang="{{ $.Site.LanguageCode }}">
 {{ partial "head" . }}
-  <body class="sans-serif">
+  <body class="varta">
 
     <!-- {{ block "header" . }}{{ partial "nav" . }}{{end}} -->
 
