center logo and text

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,15 +8,15 @@
         <img src="img/logo.png">
     
 
-    <div class="varta">
-      <div class="mw7 relative mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 black mw6">
+    <div class="tc pv4 measure narrow center varta bg-grey-5 mw7 relative">
+      <div class="mb3">
+        <h1 class="f2 f1-l di lh-title black">
           {{.title}}
         </h1>
       </div>
-      <div class="varta mw7 relative">
+      <div class="">
         {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 black mw6">
+        <p class="f4 di lh-title black">
           {{.subtitle}}
         </p>
         {{ end }}
