--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -4,7 +4,7 @@
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
     </a> -->
     
-    <div class="tc db mb0 mw7 center ph3">
+    <div class="tc db mb0 mw7 center ph0 pv0">
         <img src="img/logo.png">
     
 
