pv0 ph0 grey space

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -4,11 +4,11 @@
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
     </a> -->
     
-    <div class="tc db mb0 mw7 center ph0 pv0">
+    <div class="tc db mb0 mw7 center pv4">
         <img src="img/logo.png">
     
 
-    <div class="tc pv4 measure narrow center varta bg-grey-5 mw7 relative">
+    <div class="ph0 pv 0 tc measure narrow center varta bg-grey-5 mw7 relative">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title black">
           {{.title}}
