--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,7 +8,7 @@
         <img src="img/logo.png">
     
 
-    <div class="ph0 pv0 tc measure narrow center varta bg-grey-5 mw7 relative">
+    <div class="pruhledne ph0 pv0 tc measure narrow center varta bg-grey-5 mw7 relative">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title black">
           {{.title}}
