--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -10,13 +10,13 @@
 
     <div class="pruhledne ph0 pv0 tc measure narrow center varta bg-grey-5 relative">
       <div class="mb3">
-        <h1 class="f2 f1-l di lh-title black">
+        <h1 class="f2 f1-l di lh-title white">
           {{.title}}
         </h1>
       </div>
       <div class="">
         {{ if .subtitle }}
-        <p class="f4 di lh-title black">
+        <p class="f4 di lh-title white">
           {{.subtitle}}
         </p>
         {{ end }}
