measure-narrow removal

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,7 +8,7 @@
         <img src="img/logo.png">
     
 
-    <div class="relative pruhledne ph0 pv0 tc measure-narrow center varta bg-grey-5">
+    <div class="relative pruhledne ph0 pv0 tc center varta bg-grey-5">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title white">
           {{.title}}
