--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -5,10 +5,10 @@
     </a> -->
     
     <div class="tc db mb0 mw7 center pv4">
-        <img class="pv2"src="img/logo.png">
+        <img class="ph2 pv2"src="img/logo.png">
     
 
-    <div class="center-narrow relative pruhledne ph0 pv0 tc center varta bg-grey-5">
+    <div class="center-narrow relative pruhledne ph7-l pv0 tc center varta bg-grey-5">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title white">
           {{.title}}
