--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,7 +8,7 @@
         <img class="ph2 pv2"src="img/logo.png">
     
 
-    <div class="center-narrow relative pruhledne ph2 pv2 mh2 pv0 tc center varta bg-grey-5">
+    <div class="center-narrow relative pruhledne ph2 pv2 mw9 pv0 tc center varta bg-grey-5">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title white">
           {{.title}}
