--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -4,11 +4,11 @@
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
     </a> -->
     
-    <div class="tc db mb0 mw7 center pv4">
+    <div class="tc db mb0 center pv4">
         <img class="ph2 pv2"src="img/logo.png">
     
 
-    <div class="center-narrow relative pruhledne ph2 pv2 mw9 pv0 tc center varta bg-grey-5">
+    <div class="center-narrow relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
       <div class="mb3">
         <h1 class="f2 f1-l di lh-title white">
           {{.title}}
