--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -8,15 +8,15 @@
         <img class="ph2 pv2"src="img/logo.png">
     
 
-    <div class="center-narrow relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
+    <div class="center relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
       <div class="mb3">
-        <h1 class="f2 f1-l di lh-title white">
+        <h1 class="f2 f1-l di lh-title white center">
           {{.title}}
         </h1>
       </div>
       <div class="">
         {{ if .subtitle }}
-        <p class="f4 di lh-title white">
+        <p class="f4 di lh-title white center">
           {{.subtitle}}
         </p>
         {{ end }}
