--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -10,13 +10,13 @@
 
     <div class="relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
       <div class="mb3">
-        <h1 class="b f2 f1-l di lh-title white center">
+        <h1 class="f2 f1-l di lh-title white center">
           {{.title}}
         </h1>
       </div>
       <div class="">
         {{ if .subtitle }}
-        <p class="b f4 di lh-title white center">
+        <p class="f4 di lh-title white center">
           {{.subtitle}}
         </p>
         {{ end }}
