--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -4,19 +4,19 @@
 			<img src="/img/logo.png" alt="KVT Silesia logo" class="br0 db mb0 w-300"/>
     </a> -->
     
-    <div class="tc db mb0 center mw8 pv4">
+    <div class="tc db mb0 mw7 center pv4">
         <img class="ph2 pv2"src="img/logo.png">
     
 
-    <div class="relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
+    <div class="center-narrow relative pruhledne ph2 pv2 mh7 pv0 tc center varta bg-grey-5">
       <div class="mb3">
-        <h1 class="f2 f1-l di lh-title white center">
+        <h1 class="f2 f1-l di lh-title white">
           {{.title}}
         </h1>
       </div>
       <div class="">
         {{ if .subtitle }}
-        <p class="f4 di lh-title white center">
+        <p class="f4 di lh-title white">
           {{.subtitle}}
         </p>
         {{ end }}
