--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 
 	<!-- <div class="mw7 center pt3"> -->
 
-		<div class="mw8 relative center varta">
+		<div class="center-narrow varta">
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
 			<p class="mb0 f3 lh-title light-gray b tc">Kontakt</p>
