short text center-narrow

--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,4 +1,4 @@
-<div class="tc pv4 mw8 relative center varta">
+<div class="tc pv4 center-narrow varta">
   <!-- <div class="flex-l tc pv3">
     <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2> -->
     <p class="mb0 mt0">{{ .text1}}</p>
