--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-grey-5 center-narrow ph3 pv4 tc white">
+<footer class="bg-grey-5 center-narrow ph3 pv4 tc white center">
 
 	<!-- <div class="mw7 center pt3"> -->
 
