--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-grey-5 center-narrow ph3 pv4 tc white center">
+<footer class="bg-grey-5 center-narrow ph3 pv4 tc white center mv0">
 
 	<!-- <div class="mw7 center pt3"> -->
 
-		<div class="mv0 varta tc pv4 measure-narrow center">
+		<div class="varta tc measure-narrow center">
 
 			<!-- <img src="/img/logo.png" alt="Kaldi logo" class="db w4 center mb4 br0"> -->
 			<p class="mb0 f3 lh-title light-gray b tc">Kontakt</p>
