ph2 logo removal

--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -5,7 +5,7 @@
     </a> -->
     
     <div class="tc db mb0 measure-narrow center pv4">
-        <img class="ph2 pv2"src="img/logo.png">
+        <img class="pv2"src="img/logo.png">
     
 
     <div class="center-narrow relative pruhledne ph2 pv2 pv0 tc center varta bg-grey-5">
